블로그 환영 인사 수정

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: "Welcome to the Neo-HPSTR Blog"
+title: "블로그에 오신 걸 환영합니다."
 description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
